# learn_rust

./: renovate.json
rust_book_01/: Cargo.toml
rust_book_01/src/: main.rs
rust_book_02/: Cargo.toml
rust_book_02/src/: main.rs
rust_book_03/: Cargo.toml
rust_book_03/examples/: flows.rs  functions.rs  types.rs  variables.rs
shuttle_launchpad/hh-launchpad1/: Cargo.toml
shuttle_launchpad/hh-launchpad1/src/: main.rs
shuttle_launchpad/hh-launchpad2/: Cargo.toml
shuttle_launchpad/hh-launchpad2/src/: main.rs
shuttle_launchpad/hh-launchpad3/: Cargo.toml
shuttle_launchpad/hh-launchpad3/src/: main.rs
shuttle_launchpad/hh-launchpad4/: .gitignore  Cargo.toml
shuttle_launchpad/hh-launchpad5/: Cargo.toml
shuttle_launchpad/hh-launchpad5/src/: main.rs
shuttle_launchpad/hh-launchpad6/: Cargo.toml  schema.sql
shuttle_launchpad/hh-launchpad6/src/: main.rs
