[package]
name = "hh_launchpad2"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Hasan Hakkaev <hasan.hakkaev@gmx.at>"]
description = "Shuttle Launchpad#2 podcast APP"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.20.0"
axum = "0.6.18"
shuttle-axum = "0.19.0"
tokio = "1.28.2"
reqwest = "0.11.18"
xml = "0.8.10"
anyhow = "1.0.71"
