[package]
name = "hh-launchpad3"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Hasan Hakkaev <hasan.hakkaev@gmx.at>"]
description = "Shuttle Launchpad#3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.29.1"
serde_json = "1.0.107"
serde = "1.0.171"
axum = { version = "0.6.18", features = ["json"] }
