[package]
name = "hh-launchpad4"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Hasan Hakkaev <hasan.hakkaev@gmx.at>"]
description = "Shuttle Launchpad#4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
rand = "0.8.5"
shuttle-axum = "0.22.0"
shuttle-runtime = "0.22.0"
tokio = "1.29.1"
