[package]
name = "hh-launchpad6"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-shared-db = { version = "0.23.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = ["postgres"] }
tokio = "1.28.2"
